cmake_minimum_required(VERSION 3.13)
project(libevent_2_1_8_stable C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(compat)
include_directories(compat/sys)
include_directories(include)
include_directories(include/event2)
include_directories(sample)
include_directories(test)
include_directories(WIN32-Code)
include_directories(WIN32-Code/nmake)
include_directories(WIN32-Code/nmake/event2)

add_executable(libevent_2_1_8_stable
        compat/sys/queue.h
        include/event2/buffer.h
        include/event2/buffer_compat.h
        include/event2/bufferevent.h
        include/event2/bufferevent_compat.h
        include/event2/bufferevent_ssl.h
        include/event2/bufferevent_struct.h
        include/event2/dns.h
        include/event2/dns_compat.h
        include/event2/dns_struct.h
        include/event2/event-config.h
        include/event2/event.h
        include/event2/event_compat.h
        include/event2/event_struct.h
        include/event2/http.h
        include/event2/http_compat.h
        include/event2/http_struct.h
        include/event2/keyvalq_struct.h
        include/event2/listener.h
        include/event2/rpc.h
        include/event2/rpc_compat.h
        include/event2/rpc_struct.h
        include/event2/tag.h
        include/event2/tag_compat.h
        include/event2/thread.h
        include/event2/util.h
        include/event2/visibility.h
        include/evdns.h
        include/event.h
        include/evhttp.h
        include/evrpc.h
        include/evutil.h
        sample/dns-example.c
        sample/event-read-fifo.c
        sample/hello-world.c
        sample/hostcheck.c
        sample/hostcheck.h
        sample/http-connect.c
        sample/http-server.c
        sample/https-client.c
        sample/le-proxy.c
        sample/openssl_hostname_validation.c
        sample/openssl_hostname_validation.h
        sample/signal-test.c
        sample/time-test.c
        test/bench.c
        test/bench_cascade.c
        test/bench_http.c
        test/bench_httpclient.c
        test/regress.c
        test/regress.gen.c
        test/regress.gen.h
        test/regress.h
        test/regress_buffer.c
        test/regress_bufferevent.c
        test/regress_dns.c
        test/regress_et.c
        test/regress_finalize.c
        test/regress_http.c
        test/regress_iocp.c
        test/regress_listener.c
        test/regress_main.c
        test/regress_minheap.c
        test/regress_rpc.c
        test/regress_ssl.c
        test/regress_testutils.c
        test/regress_testutils.h
        test/regress_thread.c
        test/regress_thread.h
        test/regress_util.c
        test/regress_zlib.c
        test/test-changelist.c
        test/test-closed.c
        test/test-dumpevents.c
        test/test-eof.c
        test/test-fdleak.c
        test/test-init.c
        test/test-ratelim.c
        test/test-time.c
        test/test-weof.c
        test/tinytest.c
        test/tinytest.h
        test/tinytest_local.h
        test/tinytest_macros.h
        WIN32-Code/nmake/event2/event-config.h
        WIN32-Code/nmake/evconfig-private.h
        WIN32-Code/tree.h
        arc4random.c
        buffer.c
        buffer_iocp.c
        bufferevent-internal.h
        bufferevent.c
        bufferevent_async.c
        bufferevent_filter.c
        bufferevent_openssl.c
        bufferevent_pair.c
        bufferevent_ratelim.c
        bufferevent_sock.c
        changelist-internal.h
        config.h
        defer-internal.h
        devpoll.c
        epoll.c
        epoll_sub.c
        epolltable-internal.h
        evbuffer-internal.h
        evconfig-private.h
        evdns.c
        event-internal.h
        event.c
        event_iocp.c
        event_tagging.c
        evmap-internal.h
        evmap.c
        evport.c
        evrpc-internal.h
        evrpc.c
        evsignal-internal.h
        evthread-internal.h
        evthread.c
        evthread_pthread.c
        evthread_win32.c
        evutil.c
        evutil_rand.c
        evutil_time.c
        ht-internal.h
        http-internal.h
        http.c
        iocp-internal.h
        ipv6-internal.h
        kqueue-internal.h
        kqueue.c
        listener.c
        log-internal.h
        log.c
        minheap-internal.h
        mm-internal.h
        openssl-compat.h
        poll.c
        ratelim-internal.h
        select.c
        signal.c
        strlcpy-internal.h
        strlcpy.c
        time-internal.h
        util-internal.h
        win32select.c)
